--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/vue-query": "^5.49.1",
     "date-fns": "^3.6.0",
     "ky": "^1.4.0",
+    "radix-vue": "^1.9.0",
     "vue": "^3.4.29"
   },
   "devDependencies": {
