--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "date-fns": "^3.6.0",
     "ky": "^1.4.0",
     "radix-vue": "^1.9.0",
-    "vue": "^3.4.29"
+    "vue": "^3.4.29",
+    "vue-loading-overlay": "6.0"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
